SAK-52738 Microsoft - Groups are not created when the Microsoft team has been created from Site Info -> Enable team